--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,8 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="/login">Login</a></li>
-					<li><a href="/login">Sign Up</a></li>
+					<li><a href="/register">Sign Up</a></li>
+					<li><a href="/logout">Logout</a></li>
 				</ul>
 			</div>
 		</div>		
