--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,10 +3,10 @@
 <div class="container">
 	<div class="row">
 		<h1 style="text-align:center;">
-			Login
+			Sign Up
 		</h1>
 		<div style="width:30%; margin: 40px auto">
-			<form action="/login" method="POST">
+			<form action="/register" method="POST">
 				<div class="form-group">
 					<input class="form-control" type="text" name="username" placeholder="Username">
 				</div>
@@ -18,7 +18,7 @@
 					<button class="btn btn-lg btn-primary btn-block">Submit!</button>
 				</div>
 			</form>
-			<a href="/register">New User?</a>
+			<a href="/">Go Back</a>
 		</div>		
 	</div>
 </div>
