--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,8 +12,8 @@
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="/">New</a></li>
-					<li><a href="/">Share</a></li>
+					<li><a href="/">Save</a></li>
+					<li><a href="/upload">Upload</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="/login">Login</a></li>
