--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRdBUu1CMmdsm_f5MDj6AyyTZhq4mPK98_SiA&usqp=CAU');background-repeat: no-repeat;  background-size:cover;">
 	<nav class="navber navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -30,3 +30,10 @@
 			</div>
 		</div>		
 	</nav>
+	<div class="container" style="font-family: Impact, Charcoal, sans-serif;">
+		<div style="margin:200px";>
+			<h1 >Welcome to the Collaborative-Text-Editor</h1>
+			<h4>We Create Whatever You Think...</h4>
+		</div>
+	</div>
+<%- include("./partials/footer.ejs") %>
