--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,22 +3,29 @@
 	<p>Welcome to the TEXT EDITOR</p>
 </h1>
 <div class="container">
-	<div>
-        <textarea rows="37" cols="140" id="editor" style="background-color:dimgrey;color:white" placeholder="Type Your Text..."></textarea>
-    </div>
-	<h1>User Chats</h1>
-    <form id="message-form">
-		<div class="form-group" style="float: left;">
-			<input type="text" name="message" placeholder="Message">
+	<div class= "row">
+		<div class="col-md-9">
+			 <textarea rows="27" cols="105" id="editor" style="background-color:dimgrey;color:white" placeholder="Type Your Text..."></textarea>
 		</div>
-		<div class="form-group" style="float: none;">
-			<button class="btn btn-sm btn-primary" type="submit" id="submit-btn">Send</button>
+		<div class="col-md-3">
+			<h3>User Chats</h3>
+			<form id="message-form">
+				<div class="form-group" style="float:left;">
+					<input type="text" name="message" placeholder="Message">
+				</div>
+				<div class="form-group" style="float:right;">
+					<button class="btn btn-sm btn-primary" type="submit" id="submit-btn">Send</button>
+				</div>
+				<div class="form-group">
+					<button class="btn btn-sm btn-primary" type="submit" id="send-location">Send Location</button>
+				</div>
+			</form>
+			<div id="mess">
+				
+			</div>
+			<script src = "/socket.io/socket.io.js"></script>
+			<script src = "/js/client.js"></script>
 		</div>
-		<div class="form-group" style="float: right;">
-			<button class="btn btn-sm btn-primary" type="submit" id="send-location">Send Location</button>
-		</div>
-	</form>
-	<script src = "/socket.io/socket.io.js"></script>
-	<script src = "/js/client.js"></script>
+	</div>
 </div>
 <%- include("./partials/footer.ejs") %>
